--- a/.prettierrc
+++ b/.prettierrc
@@ -6,5 +6,6 @@
   "semi": true,
   "printWidth": 100,
   "bracketSpacing": true,
-  "pluginSearchDirs": false
+  "pluginSearchDirs": false,
+  "plugins": ["prettier-plugin-tailwindcss"]
 }
